# group_one_license_service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dev.Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
apps/: __init__.py
apps/brands/: __init__.py  admin.py  models.py  urls.py
apps/brands/migrations/: 0001_initial.py
apps/core/: __init__.py  authentication.py  exceptions.py  urls.py  views.py
apps/licenses/: __init__.py  admin.py  apps.py  models.py  repositories.py  repositories_django.py  serializers.py  services.py  urls.py  views.py
apps/licenses/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  ci.py  dev.py  prod.py
docs/: Explanation.md
requirements/: base.txt  ci.txt  dev.txt  prod.txt
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_authentication.py  test_health.py  test_models.py  test_repositories.py  test_services.py
